Remove the welcome screen from all flows.

Furthermore, if we receive the caBLE extension, skip directly to the
caBLE screen.

Bug: 878999
Change-Id: Iea80f7cc71365591a1ece4eccc61bcf5c062e9f8
Reviewed-on: https://chromium-review.googlesource.com/1195734
Commit-Queue: Balazs Engedy <engedy@chromium.org>
Reviewed-by: Balazs Engedy <engedy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587504}
Former-commit-id: e71d5e46a05f21cf2719ad8d2264dd2328d163c2